<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/a11_chooseModeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/a11_chooseModeTV" />

    <RadioGroup
        android:id="@+id/a11_modeRGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <RadioButton
            android:id="@+id/a11_modeSimpleRBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:checked="true"
            android:text="@string/a11_modeSimpleRBtn" />

        <RadioButton
            android:id="@+id/a11_modeProgressiveRBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:checked="false"
            android:text="@string/a11_modeProgressiveRBtn" />

    </RadioGroup>

    <TextView
        android:id="@+id/a11_chooseDurationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/a11_chooseDurationTV" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" >

        <RadioGroup
            android:id="@+id/a11_durationRGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/a11_durationEndlessRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:checked="true"
                android:text="@string/a11_durationEndlessRBtn" />

            <RadioButton
                android:id="@+id/a11_iterationRBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:alpha="0.5"
                android:checked="false"
                android:text="@string/a11_iterationRBtn" />

        </RadioGroup>

        <EditText
            android:id="@+id/a11_iterationET"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/a11_durationRGrp"
            android:layout_toRightOf="@+id/a11_durationRGrp"
            android:ems="10"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number"
            android:text="@string/a11_iterationET" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <Button
        android:id="@+id/a11_startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/a11_startBtn" />

</LinearLayout>
