<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/a12_resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dynamicText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/a12_yourAnswerHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a12_yourAnswerHeaderTV" />

    <TextView
        android:id="@+id/a12_yourAnswerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dynamicText" />

    <TextView
        android:id="@+id/a12_rightAnswerHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a12_rightAnswerHeaderTV" />

    <TextView
        android:id="@+id/a12_rightAnswerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamicText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/a12_answerCorrectBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a12_answerCorrectBtn" />

        <Button
            android:id="@+id/a12_answerIncorrectBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/a12_answerIncorrectBtn" />

    </LinearLayout>

</LinearLayout>
