<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/a6_titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dynamicText"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/a6_questionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a6_questionTV" />

    <TextView
        android:id="@+id/a6_questionBodyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/dynamicText" />

    <TextView
        android:id="@+id/a6_answerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a6_answerTV" />

    <TextView
        android:id="@+id/a6_answerBodyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamicText" />

</LinearLayout>
